@@ -1,22 +1,0 @@
-﻿
-Microsoft Visual Studio Solution File, Format Version 12.00
-# Visual Studio 2013
-VisualStudioVersion = 12.0.40418.0
-MinimumVisualStudioVersion = 10.0.40219.1
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MyLittleSlideShow", "MyLittleSlideShow\MyLittleSlideShow.csproj", "{CCBC064E-45C1-4299-BF58-258FF6C5AC01}"
-EndProject
-Global
-	GlobalSection(SolutionConfigurationPlatforms) = preSolution
-		Debug|Any CPU = Debug|Any CPU
-		Release|Any CPU = Release|Any CPU
-	EndGlobalSection
-	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{CCBC064E-45C1-4299-BF58-258FF6C5AC01}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{CCBC064E-45C1-4299-BF58-258FF6C5AC01}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{CCBC064E-45C1-4299-BF58-258FF6C5AC01}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{CCBC064E-45C1-4299-BF58-258FF6C5AC01}.Release|Any CPU.Build.0 = Release|Any CPU
-	EndGlobalSection
-	GlobalSection(SolutionProperties) = preSolution
-		HideSolutionNode = FALSE
-	EndGlobalSection
-EndGlobal
