@@ -7,7 +7,7 @@
     </configSections>
     <startup> 
         
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup>
     <userSettings>
         <MyLittleSlideShow.Properties.Settings>
             <setting name="ImageChangeIntervall_Minutes" serializeAs="String">
@@ -20,7 +20,7 @@
                 <value>0</value>
             </setting>
             <setting name="LastPathOfApplication" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Autostart" serializeAs="String">
                 <value>False</value>
@@ -29,10 +29,10 @@
                 <value>False</value>
             </setting>
             <setting name="LastLoadedFile" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="FolderPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SharpenValue" serializeAs="String">
                 <value>25</value>
