@@ -52,9 +52,12 @@ namespace ZZZ
 
             try
             {
-                if (all_key != null && all_key.GetValue(FullAssemblyName) != null && is_the_same_location)
+                if (all_key != null)
                 {
-                    _isonstartup = true;
+                    if (all_key.GetValue(FullAssemblyName) != null && is_the_same_location)
+                    {
+                        _isonstartup = true;
+                    }
                 }
             }
             catch (Exception)
